Basic structure and viewer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,28 +16,36 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native")
 # Find required packages
 find_package(OpenCV 4 REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(Pangolin REQUIRED)
 
 # Include directories
 include_directories(
     ${OpenCV_INCLUDE_DIRS}
     ${EIGEN3_INCLUDE_DIR}
+    ${Pangolin_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/database
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/processing
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/util
 )
 
 # Source files
 set(SOURCES
-    src/Camera.cpp
-    src/Feature.cpp
-    src/FeatureTracker.cpp
-    src/LieUtils.cpp
-    src/Frame.cpp
-    src/ConfigUtils.cpp
+    src/database/Camera.cpp
+    src/database/Feature.cpp
+    src/database/Frame.cpp
+    src/processing/FeatureTracker.cpp
+    src/processing/Estimator.cpp
+    src/util/LieUtils.cpp
+    src/util/ConfigUtils.cpp
+    src/util/VizUtils.cpp
 )
 
 # Create library
 add_library(vio_360_lib ${SOURCES})
 target_link_libraries(vio_360_lib
     ${OpenCV_LIBS}
+    ${Pangolin_LIBRARIES}
 )
 
 # Main application
@@ -48,6 +56,7 @@ add_executable(feature_tracking_demo
 target_link_libraries(feature_tracking_demo
     vio_360_lib
     ${OpenCV_LIBS}
+    ${Pangolin_LIBRARIES}
 )
 
 # Set output directory
@@ -59,3 +68,4 @@ set_target_properties(feature_tracking_demo PROPERTIES
 message(STATUS "OpenCV version: ${OpenCV_VERSION}")
 message(STATUS "OpenCV libs: ${OpenCV_LIBS}")
 message(STATUS "Eigen3 include: ${EIGEN3_INCLUDE_DIR}")
+message(STATUS "Pangolin include: ${Pangolin_INCLUDE_DIRS}")
