Sliding window structure and parallex check for monocular initialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCES
     src/database/Frame.cpp
     src/processing/FeatureTracker.cpp
     src/processing/Estimator.cpp
+    src/processing/Initializer.cpp
     src/util/LieUtils.cpp
     src/util/ConfigUtils.cpp
     src/util/VizUtils.cpp
