--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -8,11 +8,11 @@ camera:
   boundary_margin: 20
 
 feature_detection:
-  max_features: 1000
+  max_features: 2000
   quality_level: 0.01
-  min_distance: 30.0
-  grid_cols: 20
-  grid_rows: 10
+  min_distance: 10.0
+  grid_cols: 40
+  grid_rows: 20
   max_features_per_grid: 4
 
 optical_flow:
@@ -23,7 +23,7 @@ optical_flow:
 
 ransac:
   max_iterations: 1000
-  threshold_degrees: 1.0
+  threshold_degrees: 5.0
   confidence: 0.99
 
 tracking:
@@ -33,11 +33,11 @@ tracking:
 initialization:
   window_size: 10
   min_parallax: 10.0
-  min_features: 50
+  min_features: 20
   min_observations: 10
-  grid_cols: 20
-  grid_rows: 10
-  ransac_threshold: 0.01  # 0.01 radians ≈ 0.57 degrees
+  grid_cols: 40
+  grid_rows: 20
+  ransac_threshold: 0.1  # ~6 degrees (sin(6°) ≈ 0.1)
   ransac_iterations: 200
   min_inlier_ratio: 0.7
   max_reprojection_error: 5.0  # Maximum reprojection error in pixels
